creusot/tests/should_fail/duplicate_specs.stderr
error[E0433]: failed to resolve: maybe a missing crate `core`?
 --> duplicate_specs.rs:7:11
  |
7 |     fn std::vec::Vec::new<T>() -> Vec<T>
  |           ^ maybe a missing crate `core`?

error[E0433]: failed to resolve: maybe a missing crate `core`?
  --> duplicate_specs.rs:15:8
   |
15 |     fn crate::omg() -> ()
   |        ^^^^^ maybe a missing crate `core`?

error[E0433]: failed to resolve: maybe a missing crate `core`?
  --> duplicate_specs.rs:23:12
   |
23 |         fn crate::omg() -> ()
   |            ^^^^^ maybe a missing crate `core`?

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0433`.
